test/libsolidity/syntaxTests/natspec/docstring_state_variable_too_many_return_tags.sol
contract test {
  /// @notice example of notice
  /// @dev example of dev
  /// @return returns something
  /// @return returns something
  uint public state;
}
// ----
// DocstringParsingError 5256: (18-137): Documentation tag "@return" is only allowed once on state-variables.
